--- a/.env_exemple
+++ b/.env_exemple
@@ -1,74 +1,46 @@
-#
-MASTER_USUARIO=
-#
-NODE_ENV=development
-
 APP_SECRET=
 
-# Database
+APP_API_URL=
+#APP_API_URL=
 
-#DB_USER=
-#DB_PASS=
-#DB_HOST=
+APP_WEB_URL=
 
 DB_HOST=
-DB_USER=admin@fastfeet.com
-DB_PASS=123456
-DB_NAME=ecommerce
+DB_USER=
+DB_PASS=
+DB_NAME=
+DB_PORT=
 
-#Mongo
-MONGO_HOST=localhost
-MONGO_PORT=27017
-MONGO_NAME=ecommerce
 
 # Redis
 #Local
-REDIS_PORT=6379
-REDIS_HOST=127.0.0.1
+REDIS_PORT=
+REDIS_HOST=
 REDIS_PASSWORD=
 
-# Mail
+#para o limit de conexao so funcinou nesse ip
+REDIS_HOST_LIMITER=
+REDIS_PASSWORD_LIMITER=
 
-# Sentry
-SENTRY_DSN=
 
-# Ses AWS
-MAIL_HOST=
-MAIL_PORT=
-MAIL_USER=
-MAIL_PASS=
+#email
+#MAIL_DRIVER=ethereal
+MAIL_DRIVER=ses
 
-ACCESS_KEY_SES=
-ACCESS_SECRET_SES=
-ACCESS_REGION_SES=
+# Storage save image
+STORAGE_DRIVER=s3
+#STORAGE_DRIVER=disk
 
-#EMAIL_FASTFEET=FastFeet <admin@fastfeet.com>
-#esse email tem que ser válido, pois caso contrário vai da erro
-EMAIL_FASTFEET=Fastfeet <admin@fastfeet.com>
-
-URL_SITE=
-URL_FRONTEND=http://localhost:3001
-
-######
-#OBS -> caso queira que os arquivos mesmo quando estiver em produção seja salvo
-# no local, colocar a varial LOCAL_DOS_ARQUIVOS=local
-# se quiser que seja salvo na AWS S3 LOCAL_DOS_ARQUIVOS=s3
-######
-#LOCAL_DOS_ARQUIVOS=s3
-LOCAL_DOS_ARQUIVOS=local
-######
-
-#S3
-STORAGE_TYPE_S3=s3
-URL_S3=https://suaconta.s3.amazonaws.com
-
-STORAGE_TYPE_LOCAL=local
-URL_LOCAL=http://localhost:3000
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+#s3
+AWS_ACCESS_KEY_ID_S3=
+AWS_SECRET_ACCESS_KEY_S3=
 BUCKET_NAME=
 AWS_DEFAULT_REGION=
 
 AWS_DIRECTORY_PATH=uploads
 
+
+PAGARME_API_KEY=
+PAGARME_ENCRYPTION_KEY=
+
+SCEPORIGEM=
