--- a/.env_exemple
+++ b/.env_exemple
@@ -27,17 +27,18 @@ REDIS_PASSWORD_LIMITER=
 #MAIL_DRIVER=ethereal
 MAIL_DRIVER=ses
 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
 # Storage save image
 STORAGE_DRIVER=s3
 #STORAGE_DRIVER=disk
 
 #s3
-AWS_ACCESS_KEY_ID_S3=
-AWS_SECRET_ACCESS_KEY_S3=
 BUCKET_NAME=
 AWS_DEFAULT_REGION=
 
-AWS_DIRECTORY_PATH=uploads
+AWS_DIRECTORY_PATH=
 
 
 PAGARME_API_KEY=
