--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": ["src", "node_modules/pagarme-js-types/index.d.ts"]
 }
