--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.0.7",
+    "vimeo": "^2.1.1",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.26",
+    "@types/vimeo": "^2.1.3",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "babel-plugin-module-resolver": "^4.0.0",
