--- a/.env_exemple
+++ b/.env_exemple
@@ -1,14 +1,9 @@
 APP_SECRET=
 
 APP_API_URL=
+#APP_API_URL=
+
 APP_WEB_URL=
-
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
-DB_PORT=
-
 
 # Redis
 #Local
@@ -22,15 +17,18 @@ REDIS_PASSWORD_LIMITER=
 
 
 #email
-#MAIL_DRIVER=ethereal
-MAIL_DRIVER=ses
+#MAIL_DRIVER=
+MAIL_DRIVER=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
 # Storage save image
-STORAGE_DRIVER=s3
-#STORAGE_DRIVER=disk
+STORAGE_DRIVER=
+#STORAGE_DRIVER=
+#STORAGE_DRIVER=
+
+VIMEO_NAME=
 
 #s3
 BUCKET_NAME=
@@ -43,3 +41,10 @@ PAGARME_API_KEY=
 PAGARME_ENCRYPTION_KEY=
 
 SCEPORIGEM=
+
+
+VIMEO_CLIENT_ID=
+VIMEO_CLIENT_SECRET=
+VIMEO_ACCESS_TOKEN=
+
+CORS_URL=
