--- a/ormconfig.exemple.json
+++ b/ormconfig.exemple.json
@@ -16,8 +16,8 @@
     "name": "mongo",
     "type": "mongodb",
     "host": "localhost",
-    "port": "27017",
-    "database": "cursos",
+    "port": "",
+    "database": "",
     "useUnifiedTopology": true,
     "entities": ["./src/modules/**/infra/typeorm/schemas/*.ts"]
   }
