--- a/.github/workflows/digitalocean.yml
+++ b/.github/workflows/digitalocean.yml
@@ -55,4 +55,4 @@ jobs:
           cd ~/app/videoaula_backend
           yarn        
           ./node_modules/.bin/typeorm migration:run
-          pm2 restart courses-server
+          pm2 restart concurso-api
