--- a/.env_exemple
+++ b/.env_exemple
@@ -1,9 +1,7 @@
 APP_SECRET=
 
-APP_API_URL=
-#APP_API_URL=
-
-APP_WEB_URL=
+APP_URL_BACKEND=
+APP_URL_FRONTEND=
 
 # Redis
 #Local
@@ -46,5 +44,3 @@ SCEPORIGEM=
 VIMEO_CLIENT_ID=
 VIMEO_CLIENT_SECRET=
 VIMEO_ACCESS_TOKEN=
-
-CORS_URL=
